--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
   <!-- Schrift Kiro -->
   <link href="https://fonts.googleapis.com/css2?family=Kiro:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
-  <!-- Icons (Font Awesome) -->
+  <!-- Icons für "Was uns auszeichnet" -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <style>
@@ -40,7 +39,7 @@
     header {
       background: linear-gradient(to right, var(--sylegro-blue), var(--sylegro-green));
       color: white;
-      padding: 8px 20px; /* schmaler */
+      padding: 8px 20px; /* etwas schmaler */
     }
 
     .header-inner {
@@ -60,7 +59,38 @@
       filter: drop-shadow(0 6px 16px rgba(15, 23, 42, 0.5));
     }
 
-    /* MAIN */
+    nav {
+      display: flex;
+      align-items: center;
+      flex-wrap: wrap;
+      gap: 20px;
+    }
+
+    nav a {
+      color: white;
+      font-size: 0.98rem;
+      font-weight: 500;
+      position: relative;
+      padding-bottom: 3px;
+    }
+
+    nav a::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 0;
+      height: 2px;
+      background: rgba(255,255,255,0.9);
+      border-radius: 999px;
+      transition: width .18s ease-out;
+    }
+
+    nav a:hover::after {
+      width: 100%;
+    }
+
+    /* MAIN LAYOUT */
     main {
       max-width: 1100px;
       margin: 0 auto;
@@ -71,15 +101,8 @@
       display: grid;
       grid-template-columns: minmax(0, 2fr) minmax(0, 1.5fr);
       gap: 22px;
-      align-items: flex-start;
+      align-items: stretch;
       margin-bottom: 24px;
-    }
-
-    /* NUR der Text wird nach unten geschoben – nicht die ganze Karte */
-    @media (min-width: 901px) {
-      .welcome-content {
-        padding-top: 30px;
-      }
     }
 
     .card {
@@ -89,30 +112,226 @@
       margin-bottom: 20px;
       box-shadow: 0 8px 24px rgba(15, 23, 42, 0.06);
       border-top: 4px solid var(--sylegro-blue);
+      height: 100%;
+    }
+
+    h1, h2, h3 {
+      margin-top: 0;
+      font-weight: 600;
+    }
+
+    h2 {
+      font-size: 1.35rem;
+      margin-bottom: 10px;
+    }
+
+    p {
+      line-height: 1.6;
+      font-size: 0.98rem;
+      margin-top: 0;
+      margin-bottom: 10px;
+    }
+
+    /* Nur der Text in der rechten Kachel wird etwas nach unten versetzt */
+    @media (min-width: 900px) {
+      .welcome-inner {
+        padding-top: 24px; /* bei Bedarf anpassen */
+      }
+    }
+
+    @media (max-width: 900px) {
+      .grid {
+        grid-template-columns: 1fr;
+      }
+      .header-inner {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      nav {
+        justify-content: flex-start;
+      }
+      .excellence-grid {
+        grid-template-columns: 1fr;
+      }
+    }
+
+    /* SLIDER */
+    .slider {
+      position: relative;
+    }
+
+    .slider-image-wrapper {
+      position: relative;
+      overflow: hidden;
+      border-radius: 14px;
+      margin-bottom: 12px;
+    }
+
+    #service-image {
+      width: 100%;
+      max-height: 280px;
+      object-fit: cover;
+      border-radius: 14px;
+      opacity: 1;
+      transition: opacity 0.4s ease;
+      display: block;
+    }
+
+    .slider-title {
+      font-size: 1.1rem;
+      font-weight: 600;
+      margin-bottom: 4px;
+      color: var(--sylegro-blue);
+    }
+
+    .slider-text {
+      font-size: 0.95rem;
+      color: #374151;
+      margin-bottom: 10px;
+    }
+
+    .slider-dots {
+      display: flex;
+      gap: 8px;
+      margin-top: 8px;
+      align-items: center;
+    }
+
+    .dot {
+      width: 11px;
+      height: 11px;
+      border-radius: 999px;
+      border: 1px solid #9ca3af;
+      cursor: pointer;
+      background: transparent;
+      transition: background 0.15s ease, border-color 0.15s ease, transform 0.15s ease;
+    }
+
+    .dot.active {
+      background: var(--sylegro-green);
+      border-color: var(--sylegro-green);
+      transform: scale(1.1);
+    }
+
+    /* Slider-Pfeile */
+    .slider-nav {
+      position: absolute;
+      top: 50%;
+      left: 0;
+      right: 0;
+      display: flex;
+      justify-content: space-between;
+      transform: translateY(-50%);
+      pointer-events: none;
+    }
+
+    .slider-arrow {
+      pointer-events: auto;
+      background: rgba(255, 255, 255, 0.9);
+      border: none;
+      border-radius: 999px;
+      width: 30px;
+      height: 30px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 0 4px 10px rgba(15, 23, 42, 0.15);
+      cursor: pointer;
+      font-size: 16px;
+      color: #374151;
+      transition: transform 0.15s ease, box-shadow 0.15s ease, background 0.15s ease;
+    }
+
+    .slider-arrow:hover {
+      transform: translateY(-1px);
+      box-shadow: 0 6px 14px rgba(15, 23, 42, 0.18);
+      background: #ffffff;
+    }
+
+    /* QUICK LINKS / KACHELN */
+    .quick-links {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+      gap: 22px;
+      margin-top: 10px;
+      align-items: stretch;
+    }
+
+    .quick-links .tile {
+      border-radius: 18px;
+      padding: 20px 20px 18px;
+      box-shadow: 0 8px 24px rgba(15, 23, 42, 0.06);
+      background: linear-gradient(135deg,
+        rgba(0, 99, 165, 0.08),
+        rgba(23, 168, 99, 0.08)
+      );
+      border: 1px solid rgba(148, 163, 184, 0.25);
+      transition: transform 0.18s ease, box-shadow 0.18s ease,
+                  background 0.18s ease, border-color 0.18s ease;
+      height: 100%;
+    }
+
+    .quick-links .tile:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 14px 30px rgba(15, 23, 42, 0.12);
+      background: linear-gradient(135deg,
+        rgba(0, 99, 165, 0.14),
+        rgba(23, 168, 99, 0.16)
+      );
+      border-color: rgba(37, 99, 235, 0.3);
+    }
+
+    .quick-links h3 {
+      margin-bottom: 6px;
+      font-size: 1.05rem;
+    }
+
+    .quick-links p {
+      margin: 0;
+      font-size: 0.94rem;
+      color: #374151;
     }
 
     /* WAS UNS AUSZEICHNET */
+    .excellence-card {
+      margin-top: 10px;
+    }
+
     .excellence-grid {
       display: grid;
-      grid-template-columns: repeat(2, minmax(0, 1fr));
+      grid-template-columns: repeat(2, minmax(260px, 1fr)); /* 2x2 */
       gap: 24px;
       margin-top: 16px;
     }
 
     .excellence-item {
       display: flex;
-      gap: 12px;
+      gap: 10px;
       align-items: flex-start;
       padding: 10px 6px 0 6px;
       border-left: 3px solid var(--sylegro-green);
     }
 
-    .excellence-item i {
-      font-size: 22px;
+    .excellence-icon {
+      flex: 0 0 auto;
+      margin-top: 2px;
+      font-size: 20px;
       color: var(--sylegro-green);
-      margin-top: 3px;
-      min-width: 24px;
+      width: 24px;
       text-align: center;
+    }
+
+    .excellence-text h3 {
+      margin-top: 0;
+      margin-bottom: 6px;
+      color: var(--sylegro-green);
+      font-size: 1.1rem;
+    }
+
+    .excellence-text p {
+      margin: 0;
+      color: #4b5563;
+      font-size: 0.95rem;
     }
 
     /* Qualität-Kachel */
@@ -122,20 +341,16 @@
       margin-top: 20px;
     }
 
-    .quality-card h2 {
-      color: var(--sylegro-green);
-    }
-
-    .quality-intro {
+    .quality-lead {
       font-weight: 700;
-      margin-bottom: 10px;
+      margin-bottom: 8px;
     }
 
     .quality-highlight {
+      display: block;
+      margin: 12px 0 16px;
       color: var(--sylegro-green);
       font-weight: 600;
-      margin: 14px 0;
-      display: block;
     }
 
     footer {
@@ -169,9 +384,8 @@
   <!-- MAIN -->
   <main>
 
-    <!-- Grid -->
+    <!-- Grid: Slider links, Text rechts -->
     <section class="grid">
-
       <!-- Slider -->
       <div class="card slider">
         <h2>Unsere Kernleistungen</h2>
@@ -182,14 +396,14 @@
             <button class="slider-arrow" id="next-slide">&#10095;</button>
           </div>
         </div>
-        <div id="service-title"></div>
-        <div id="service-text"></div>
-        <div id="slider-dots"></div>
+        <div class="slider-title" id="service-title"></div>
+        <div class="slider-text" id="service-text"></div>
+        <div class="slider-dots" id="slider-dots"></div>
       </div>
 
-      <!-- Text, nur Inhalt nach unten versetzt -->
+      <!-- Willkommen-Text -->
       <div class="card">
-        <div class="welcome-content">
+        <div class="welcome-inner">
           <p>
             Sylegro, Ihr zuverlässiger Partner für professionelle Reinigungs- und Hauswartungsdienste.
             Unser Name steht für Qualität, Flexibilität und transparente Lösungen, die individuell auf
@@ -203,61 +417,90 @@
           </p>
         </div>
       </div>
+    </section>
 
+    <!-- Vision -->
+    <section class="card">
+      <h2>Unsere Vision</h2>
+      <p><strong>Wir gestalten die Zukunft der Gebäudereinigung – digital, nachhaltig und effizient.</strong></p>
+      <p>
+        Mit innovativen Technologien, umweltfreundlichen Reinigungsmethoden und klar definierten Prozessen
+        setzen wir neue Massstäbe in der Branche. Unsere digitalen Lösungen sorgen für maximale Transparenz
+        und Effizienz, während nachhaltige Verfahren den Werterhalt Ihrer Immobilie sichern.
+      </p>
     </section>
 
     <!-- Was uns auszeichnet -->
     <section class="card excellence-card">
       <h2>Was uns auszeichnet</h2>
-
       <div class="excellence-grid">
-
+        <!-- 1 -->
         <div class="excellence-item">
-          <i class="fa-solid fa-medal"></i>
-          <div>
+          <div class="excellence-icon">
+            <i class="fa-solid fa-medal" aria-hidden="true"></i>
+          </div>
+          <div class="excellence-text">
             <h3>Qualitätsorientiert</h3>
-            <p>Wir garantieren Ihnen höchste Qualität durch bewährte Standards und stetige Optimierung.</p>
+            <p>
+              Wir garantieren Ihnen die gewünschte Qualität durch unser bewährtes Qualitätsmanagement.
+              Jedes Detail wird kontinuierlich überprüft und optimiert, um Ergebnisse zu liefern, die Ihre
+              Erwartungen übertreffen.
+            </p>
           </div>
         </div>
-
+        <!-- 2 -->
         <div class="excellence-item">
-          <i class="fa-solid fa-graduation-cap"></i>
-          <div>
+          <div class="excellence-icon">
+            <i class="fa-solid fa-graduation-cap" aria-hidden="true"></i>
+          </div>
+          <div class="excellence-text">
             <h3>Erfahrung &amp; Know-How</h3>
-            <p>Langjährige Erfahrung und Fachwissen garantieren professionelle Lösungen.</p>
+            <p>
+              Mit langjähriger Erfahrung und fundiertem Fachwissen garantieren wir Ihnen professionelle
+              Lösungen, die auf bewährten Methoden und stetiger Weiterentwicklung basieren.
+            </p>
           </div>
         </div>
-
+        <!-- 3 -->
         <div class="excellence-item">
-          <i class="fa-solid fa-eye"></i>
-          <div>
+          <div class="excellence-icon">
+            <i class="fa-solid fa-eye" aria-hidden="true"></i>
+          </div>
+          <div class="excellence-text">
             <h3>Transparent</h3>
-            <p>Klare Kommunikation & nachvollziehbare Abläufe – jederzeit.</p>
+            <p>
+              Wir legen grossen Wert auf klare Kommunikation. Sie wissen immer genau, wie wir arbeiten,
+              warum wir bestimmte Massnahmen ergreifen und wie diese zu den besten Ergebnissen führen.
+            </p>
           </div>
         </div>
-
+        <!-- 4 -->
         <div class="excellence-item">
-          <i class="fa-solid fa-arrows-turn-to-dots"></i>
-          <div>
+          <div class="excellence-icon">
+            <i class="fa-solid fa-arrows-rotate" aria-hidden="true"></i>
+          </div>
+          <div class="excellence-text">
             <h3>Flexibel</h3>
-            <p>Wir passen uns Ihren Bedürfnissen an – schnell, effizient & individuell.</p>
+            <p>
+              Unsere Dienstleistungen sind so flexibel wie Ihre Bedürfnisse. Wir passen uns Ihren
+              Anforderungen an und bieten massgeschneiderte Lösungen, wann immer Sie sie benötigen.
+            </p>
           </div>
         </div>
-
       </div>
     </section>
 
-    <!-- Qualität-Kachel -->
+    <!-- Qualität -->
     <section class="card quality-card">
-
       <h2>Qualität</h2>
 
-      <p class="quality-intro">Weil Qualität kein Zufall ist</p>
+      <p class="quality-lead"><strong>Weil Qualität kein Zufall ist</strong></p>
 
       <p>
-        Um höchste Qualität zu gewährleisten, setzen wir auf klar definierte Prozesse, bewährte Standards und den
-        gezielten Einsatz modernster Technik. Durch regelmässige Schulungen und den Einsatz effizienter
-        Arbeitsmethoden stellen wir sicher, dass unsere Dienstleistungen stets auf höchstem Niveau erbracht werden.
+        Um höchste Qualität zu gewährleisten, setzen wir auf klar definierte Prozesse, bewährte Standards und
+        den gezielten Einsatz modernster Technik. Durch regelmässige Schulungen und den Einsatz effizienter
+        Arbeitsmethoden stellen wir sicher, dass unsere Dienstleistungen stets auf höchstem Niveau erbracht
+        werden.
       </p>
 
       <span class="quality-highlight">
@@ -265,14 +508,11 @@
       </span>
 
       <p>
-        Unser Handeln richtet sich voll und ganz nach den Bedürfnissen unserer Kunden: Wir reagieren schnell und
-        effizient auf individuelle Wünsche und passen unsere Leistungen entsprechend an. Ihre Zufriedenheit ist unser
-        wichtigster Erfolgsindikator.
-      </p>
-
-      <p>
-        Regelmässige Zufriedenheitsanalysen, Qualitätskontrollen und gemeinsame Rundgänge ermöglichen es uns,
-        direkt auf Feedback zu reagieren und unsere Standards kontinuierlich zu verbessern.
+        Unser Handeln richtet sich voll und ganz nach den Bedürfnissen unserer Kunden: Wir reagieren schnell
+        und effizient auf individuelle Wünsche und passen unsere Leistungen entsprechend an. Ihre Zufriedenheit
+        ist unser wichtigster Erfolgsindikator. Regelmässige Zufriedenheitsanalysen, Qualitätskontrollen und
+        gemeinsame Rundgänge ermöglichen es uns, direkt auf Feedback zu reagieren und unsere Standards
+        kontinuierlich zu verbessern.
       </p>
 
       <p>
@@ -280,31 +520,74 @@
       </p>
 
       <p>
-        Durch strikte Richtlinien und Massnahmen der Arbeitssicherheit und Gesundheit schaffen wir ein Arbeitsumfeld,
-        in dem sich jeder sicher und wertgeschätzt fühlt. So stellen wir sicher, dass unser Team motiviert und
-        engagiert bleibt und unsere Kunden auf höchstem Niveau betreut.
+        Durch strikte Richtlinien und Massnahmen der Arbeitssicherheit und Gesundheit schaffen wir ein
+        Arbeitsumfeld, in dem sich jeder sicher und wertgeschätzt fühlt. So stellen wir sicher, dass unser Team
+        motiviert und engagiert bleibt und unsere Kunden auf höchstem Niveau betreut.
       </p>
+    </section>
 
+    <!-- Quick Links -->
+    <section class="quick-links">
+      <a href="dienstleistungen.html">
+        <div class="tile">
+          <h3>Unsere Dienstleistungen</h3>
+          <p>Unterhaltsreinigung, Spezialreinigung &amp; Hauswartung im Überblick.</p>
+        </div>
+      </a>
+      <a href="ueber-uns.html">
+        <div class="tile">
+          <h3>Über uns</h3>
+          <p>Die Menschen und Werte hinter Sylegro.</p>
+        </div>
+      </a>
+      <a href="jobs.html">
+        <div class="tile">
+          <h3>Jobs</h3>
+          <p>Werde Teil unseres Teams.</p>
+        </div>
+      </a>
+      <a href="kontakt.html">
+        <div class="tile">
+          <h3>Kontakt</h3>
+          <p>Wir freuen uns auf Ihre Anfrage.</p>
+        </div>
+      </a>
     </section>
 
   </main>
 
-  <footer>© Sylegro <span id="year"></span></footer>
+  <!-- FOOTER -->
+  <footer>
+    © Sylegro <span id="year"></span>
+  </footer>
 
-  <!-- Slider-Script (unverändert) -->
+  <!-- Slider-Logik -->
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
 
     const services = [
-      { title: "Unterhaltsreinigung", text: "Regelmässige Reinigung …", image: "Titelbildmitlogo.jpg" },
-      { title: "Spezialreinigung", text: "Tiefenreinigungen …", image: "AdobeStock_482143067.jpeg" },
-      { title: "Hauswartung", text: "Umfassende Betreuung …", image: "DSC_6486.JPG" }
+      {
+        title: "Unterhaltsreinigung",
+        text: "Regelmässige Reinigung von Büros, Liegenschaften und Gewerbeflächen – sauber, zuverlässig und strukturiert.",
+        image: "Titelbildmitlogo.jpg"
+      },
+      {
+        title: "Spezialreinigung",
+        text: "Tiefenreinigungen, Glas- und Fassadenreinigung, Bau- und Umzugsreinigung für besondere Anforderungen.",
+        image: "AdobeStock_482143067.jpeg"
+      },
+      {
+        title: "Hauswartung",
+        text: "Umfassende Betreuung Ihrer Liegenschaft: Technik, Pflege der Aussenanlagen und Werterhaltung aus einer Hand.",
+        image: "DSC_6486.JPG"
+      }
     ];
 
     const img = document.getElementById("service-image");
     const title = document.getElementById("service-title");
     const text = document.getElementById("service-text");
     const dots = document.getElementById("slider-dots");
+
     let current = 0;
 
     function renderDots() {
@@ -322,15 +605,35 @@
 
     function updateSlider(withFade) {
       const s = services[current];
-      img.style.opacity = 0;
-      setTimeout(() => {
+
+      if (withFade) {
+        img.style.opacity = 0;
+        setTimeout(() => {
+          img.src = s.image;
+          img.alt = s.title;
+          title.textContent = s.title;
+          text.textContent = s.text;
+          renderDots();
+          img.style.opacity = 1;
+        }, 200);
+      } else {
         img.src = s.image;
+        img.alt = s.title;
         title.textContent = s.title;
         text.textContent = s.text;
         renderDots();
-        img.style.opacity = 1;
-      }, 200);
+      }
     }
+
+    document.getElementById("prev-slide").addEventListener("click", () => {
+      current = (current - 1 + services.length) % services.length;
+      updateSlider(true);
+    });
+
+    document.getElementById("next-slide").addEventListener("click", () => {
+      current = (current + 1) % services.length;
+      updateSlider(true);
+    });
 
     setInterval(() => {
       current = (current + 1) % services.length;
